# Tetris-Clone

./: CMakeLists.txt  README.md
assets/shaders/: screen.frag  screen.vert
src/core/: game.cpp  game.h  main.cpp  random.cpp  random.h
src/entity/: entity.h
src/renderer/: renderer.cpp  renderer.h  shader.h
